<resources>
    <string name="app_name">Foody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_course">Main Course</string>
    <string name="dessert">Dessert</string>
    <string name="side_dish">Side Dish</string>
    <string name="appetizer">Appetizer</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegeterian">Vegeterian</string>
    <string name="vegan">Vegan</string>
    <string name="apply">Apply</string>

</resources>