<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.fragments.recipes.bottomsheet.RecipesBottomSheet">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Meal Type"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/mealTypeScrollView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/mealTypeChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:checkedChip="@id/chipMainCourse"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMainCourse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSideDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAppetizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer"/>

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>


    <TextView
        android:id="@+id/textMealType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Diet Type"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealTypeScrollView" />



    <HorizontalScrollView
        android:id="@+id/dietTypeScrollView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMealType" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/dietTypeChipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleLine="true"
                app:checkedChip="@id/chipGlutenFree"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipGlutenFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipKetogenic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVegeterian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegeterian"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan"/>

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>


    <Button
        android:id="@+id/buttonApply"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:text="@string/apply"
        app:layout_constraintTop_toBottomOf="@id/dietTypeScrollView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>